<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activity.JoinActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        style="@style/scrollView_manager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/UpperMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <TextView
                    style="@style/main_title"
                    android:text="@string/join_title" />

                <TextView
                    style="@style/sub_title"
                    android:text="@string/join_con" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <!-- ID 입력 -->
                <TextView
                    android:id="@+id/codeText"
                    style="@style/join_textview"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="ID를 입력하세요." />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputCust"
                        style="@style/join_office_inputBox"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:hint="ID"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/search"
                        style="@style/btn_white"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="중복 확인" />
                </LinearLayout>

                <!-- PW -->
                <LinearLayout style="@style/join_conLayout">

                    <TextView
                        style="@style/join_textview"
                        android:text="비밀번호를 입력하세요(필수)" />

                    <EditText
                        android:id="@+id/inputPw"
                        style="@style/inputBox"
                        android:hint="password"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>

                <!-- re-PW -->
                <LinearLayout style="@style/join_conLayout">

                    <TextView
                        style="@style/join_textview"
                        android:text="비밀번호 확인(필수)" />

                    <EditText
                        android:id="@+id/inputRePw"
                        style="@style/inputBox"
                        android:hint="Re-password"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>

                <!-- 이름 -->
                <LinearLayout style="@style/join_conLayout">

                    <TextView
                        android:id="@+id/label3"
                        style="@style/join_textview"
                        android:text="@string/join_cont_name" />

                    <EditText
                        android:id="@+id/inputName"
                        style="@style/inputBox"
                        android:hint="@string/join_hint_name"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>

                <!-- 휴대폰번호 -->
                <LinearLayout style="@style/join_conLayout">

                    <TextView
                        android:id="@+id/label2"
                        style="@style/join_textview"
                        android:text="@string/join_cont_num" />

                    <EditText
                        android:id="@+id/inputNum"
                        style="@style/inputBox"
                        android:hint="@string/join_hint_phone"
                        android:importantForAutofill="no"
                        android:inputType="phone"
                        android:maxLength="13" />

                </LinearLayout>
                <!-- 생년월일 -->
                <LinearLayout style="@style/join_conLayout">

                    <TextView
                        android:id="@+id/label4"
                        style="@style/join_textview"
                        android:text="@string/join_cont_bir" />

                    <EditText
                        android:id="@+id/inputBr"
                        style="@style/inputBox"
                        android:hint="@string/join_hint_bir"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="8" />
                </LinearLayout>

                <!-- 이메일 -->
                <LinearLayout
                    style="@style/join_conLayout"
                    android:layout_marginBottom="0dp">

                    <TextView
                        android:id="@+id/label6"
                        style="@style/join_textview"
                        android:text="@string/join_cont_email" />

                    <EditText
                        android:id="@+id/inputEmail"
                        style="@style/inputBox"
                        android:hint="@string/join_hint_email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />

                </LinearLayout>
                <!-- btn -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/confirm_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/solid_button_green"
                        android:enabled="false"
                        android:text="회원가입하기"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>