<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:layout_gravity="right"
        android:text="@string/checkBox"
        android:textColor="@color/black"
        android:textSize="10sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="left"
       android:padding="15dp"
       android:text="@string/hashtag"
       android:textStyle="bold"
       android:textSize="10sp"
       android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        >
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_image_24"
            />

    </LinearLayout>




</LinearLayout>