<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/dandelion5" />

    <EditText
        android:id="@+id/inputID"
        style="@style/login_editText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/gangwon"
        android:hint="Nickname"
        android:inputType="textPersonName"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/inputEmail"
        style="@style/login_editText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/gangwon"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/inputPw"
        style="@style/login_editText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/gangwon"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/inputRePw"
        style="@style/login_editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue2"
        android:fontFamily="@font/gangwon"
        android:hint="@string/re_pw"
        android:inputType="textPassword"
        android:textSize="25dp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/gangwon"
        android:text="가입하기"
        android:textColor="@color/blue2"
        android:textSize="25dp"
        android:textStyle="bold" />


</RelativeLayout>